fixed text overflow in task container

--- a/src/Task/Task.module.css
+++ b/src/Task/Task.module.css
@@ -10,7 +10,7 @@
   font-size: 1rem;
   width: 100%; 
   max-width: 500px;
-  height: 60px; 
+  height: auto; 
 }
 
   
