--- a/src/TaskList/TaskList.module.css
+++ b/src/TaskList/TaskList.module.css
@@ -15,7 +15,7 @@
   margin-bottom: 0.1rem;
   width: 100%; 
   max-width: 500px;
-  height: 50px; 
+  height: auto;
   padding: 0 1rem; 
   border: 1px solid #ccc; 
   border-radius: 5px; 
